cambios en registro y ayuda

--- a/client/app/views/base.html
+++ b/client/app/views/base.html
@@ -23,7 +23,7 @@
 
     <md-content layout="column" class="gris" flex>
 
-      <toolbar titulo="titulo" menu="menu" md-scroll-shrink></toolbar>
+      <toolbar titulo="titulo" menu="menu" url="url" md-scroll-shrink></toolbar>
 
       <md-content ng-if="!cargando" ui-view flex class="bg-transparent paginas"></md-content>
 
