--- a/client/app/stylesheets/main.css
+++ b/client/app/stylesheets/main.css
@@ -697,6 +697,11 @@ md-toast.info .md-toast-content {
 }
 
 
+.fila:hover{
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
 
 @media (max-width: 960px) {
   .padding-views{
