--- a/client/app/views/registroPaso3.html
+++ b/client/app/views/registroPaso3.html
@@ -15,7 +15,7 @@
           
           <md-input-container flex>
             <label>Nombre (s)</label>
-            <input type="text" name="nombre" ng-model="rg.datos.nombre" mayusculas required maxlength="30">
+            <input type="text" name="nombre" ng-model="rg.datos.nombre" mayusculas required maxlength="50">
             <div ng-messages="rg.registroForm.nombre.$error" ng-if="rg.registroForm.$submitted">
               <div ng-message="required">El campo es requerido</div> 
               <div ng-message="maxlength">El campo no puede ser mas grande</div>            
@@ -23,7 +23,7 @@
           </md-input-container>
           <md-input-container flex>
             <label>A. Paterno</label>
-            <input type="text" name="apaterno" ng-model="rg.datos.apaterno" mayusculas required maxlength="30">
+            <input type="text" name="apaterno" ng-model="rg.datos.apaterno" mayusculas required maxlength="50">
             <div ng-messages="rg.registroForm.apaterno.$error" ng-if="rg.registroForm.$submitted">
               <div ng-message="required">El campo es requerido</div> 
               <div ng-message="maxlength">El campo no puede ser mas grande</div>            
@@ -31,13 +31,14 @@
           </md-input-container>
           <md-input-container flex>
             <label>A. Materno</label>
-            <input type="text" name="amaterno" ng-model="rg.datos.amaterno" mayusculas required maxlength="30">
+            <input type="text" name="amaterno" ng-model="rg.datos.amaterno" mayusculas required maxlength="50">
             <div ng-messages="rg.registroForm.amaterno.$error" ng-if="rg.registroForm.$submitted">
               <div ng-message="required">El campo es requerido</div>  
               <div ng-message="maxlength">El campo no puede ser mas grande</div>           
             </div>
           </md-input-container>
-          <mdp-date-picker mdp-open-on-click required name="dateFormat" mdp-placeholder="Fecha de Nacimiento" mdp-format="DD/MM/YYYY" ng-model="rg.fecha" class="md-block" flex>
+
+          <mdp-date-picker mdp-open-on-click required name="dateFormat" mdp-placeholder="Fecha de Nacimiento" mdp-format="DD/MM/YYYY" ng-model="rg.datos.fechaNac" class="md-block" flex>
             <div ng-messages="rg.registroForm.dateFormat.$error" ng-if="rg.registroForm.$submitted">
               <div ng-message="required">El campo es requerido</div>
               <div ng-message="format">Formato de fecha invalido</div>
