--- a/client/app/views/toolbar.html
+++ b/client/app/views/toolbar.html
@@ -3,7 +3,7 @@
 		<md-button ng-click="tb.menuSwitch('left')" class="md-icon-button">
 			<ng-md-icon icon="{{tb.menu}}" style="fill:white" aria-label="Menu"></ng-md-icon> 
 		</md-button>
-	  	<img src="img/logomini.png" alt="MedicaVial" style="margin-right: 10px">
+	  	<img ng-if="tb.url !== 'index.home' " src="img/logomini.png" alt="MedicaVial" style="margin-right: 10px">
 	  	<h1>{{ tb.titulo }}</h1>
 	  	<span flex></span>
 	  	<h2 hide show-gt-sm>Unidad: {{ tb.unidad }} </h2>
