cambios para registro y se añaden mas funciones

--- a/client/app/views/registro.html
+++ b/client/app/views/registro.html
@@ -74,8 +74,9 @@
                 
               </md-card-content>
               <md-card-actions layout="row" layout-align="center center">
-                
+                <md-button>Regresar a Inicio</md-button>
                 <md-button>Imprimir</md-button>
+                <md-button>Ir al Expediente</md-button>
               </md-card-actions>
             </md-card>
           </md-content>
