--- a/client/app/views/toolbar.html
+++ b/client/app/views/toolbar.html
@@ -6,8 +6,8 @@
 	  	<img ng-if="tb.url !== 'index.home' " src="img/logomini.png" alt="MedicaVial" style="margin-right: 10px">
 	  	<h1>{{ tb.titulo }}</h1>
 	  	<span flex></span>
-	  	<h2 hide show-gt-sm>Unidad: {{ tb.unidad }} </h2>
-	  	<h2 hide show-gt-sm>{{ tb.nombre }}</h2>
+	  	<h2 hide show-gt-sm> {{ tb.nombre }} </h2>
+	  	<small hide show-gt-sm class="nombre-unidad">( {{ tb.unidad }} ) </small>
 		<md-button class="md-icon-button" aria-label="Inicio" ui-sref="index.home">
 	  		<ng-md-icon icon="home" style="fill:white"></ng-md-icon>
 	  		<md-tooltip>
