--- a/client/app/views/tickets.html
+++ b/client/app/views/tickets.html
@@ -93,4 +93,8 @@
 	<br>
 </div>
 
+<md-content class="md-whiteframe-2dp" ng-if="dt.tickets.length == 0">
+  <md-subheader class="md-no-sticky">Sin Tickets registrados</md-subheader>
+</md-content>
+
 
