--- a/client/app/stylesheets/main.css
+++ b/client/app/stylesheets/main.css
@@ -6,7 +6,7 @@
     padding: 20px
 }*/
 
-html {
+/*html {
   -webkit-text-size-adjust: 100%;
 }
 
@@ -22,6 +22,54 @@ body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   
+}
+*/
+
+
+html, body  {
+  font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
+  font-style: normal;
+  font-display: optional;
+  font-weight: 300!important;
+  line-height: 1.42857143;
+  letter-spacing: 0.01rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+html {
+  overflow: hidden; 
+}
+
+body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+          align-content: stretch;
+  background: #ececec; 
+  height: 100%;
 }
 
 h1,h2,h3,h4{
@@ -355,7 +403,6 @@ md-tooltip{
 
 .base{
   background-color: #f5f5f5 !important;
-  /*display: flex;*/
   height: 100%;
   overflow: auto;
   position: relative;
@@ -752,6 +799,12 @@ md-toast.info .md-toast-content {
 @media (max-width: 960px) {
   .padding-views{
     padding: 0 !important;
+  }
+
+  .img-registro{
+    max-width: 90%;
+    max-height: 90%;
+    margin-bottom: 50px;
   }
 
   .estatus{
