se agrega principio de solicitud

--- a/client/app/stylesheets/main.css
+++ b/client/app/stylesheets/main.css
@@ -796,6 +796,10 @@ md-toast.info .md-toast-content {
 }
 
 
+.caja{
+  height: 200px;
+}
+
 @media (max-width: 960px) {
   .padding-views{
     padding: 0 !important;
