--- a/client/app/views/solicitudAutorizacion.html
+++ b/client/app/views/solicitudAutorizacion.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Agrega Telefono" ng-init="sol.inicio()" flex-sm="65" flex-gt-md="60" flex="100">
+<md-dialog aria-label="Agrega Telefono" ng-init="sol.inicio()" flex-sm="70" flex-gt-md="75" flex="100">
 
 
     <md-toolbar class="md-warn">
@@ -13,100 +13,223 @@
     <md-dialog-content layout-wrap>
 
       <md-tabs md-selected="sol.tabActual" md-align-tabs="'top'" md-dynamic-height md-border-bottom>
-      <md-tab id="tab1" ng-disabled="sol.step1block">
-        <md-tab-label>Tipo de Solicirud</md-tab-label>
-        <md-tab-body>
+        <md-tab id="tab1" ng-disabled="sol.step1block">
+          <md-tab-label>Tipo de Solicirud</md-tab-label>
+          <md-tab-body>
 
-          <md-content layout-padding layout-wrap layout="row">
-            
-            <md-input-container>
-              <label>Autorización</label>
-              <md-select ng-model="sol.datos.tipo" placeholder="Selecciona Autorización">
-                <md-option value="">Selecciona Autorización</md-option>
-                <md-option value="4">Interconsulta</md-option>
-                <md-option value="3">Estudio Especial</md-option>
-                <md-option value="1">Rehabilitación</md-option>
-                <md-option value="9">Suministro Especial</md-option>
-                <md-option value="11">Prestamo de Información</md-option>
-                <md-option value="21">Salida de paquete</md-option>
-                <md-option value="2">Problema Documental</md-option>
-              </md-select>
-            </md-input-container>
-
-            <md-whiteframe class="md-whiteframe-3dp bgm-amber" ng-if="sol.datos.tipo" layout layout-align="center start">
+            <md-content layout-padding layout-wrap layout="row" layout-align="center center">
               
-              <span ng-if="sol.datos.tipo == 4">
-                Te recordamos que dentro del paquete pactado está incluida la atención inicial y subsecuente por médico traumatólogo o urgenciólogo. Así como también la consulta de valoración por médico de cualquier otra especialidad, en caso de requerir tratamiento de una especialidad distinta a Traumatología y Ortopedia por favor solicita una salida de paquete.
-              </span>
-              <span ng-if="sol.datos.tipo == 3">
-                Te recordamos que los Rx están conveniados dentro del paquete.
-              </span>
-              <span ng-if="sol.datos.tipo == 1">
-                Según su lesión y siguiendo el criterio y las indicaciones del médico tratante es recomendable proporcionarle al lesionado ejercicio para realizar por su cuenta. Aunado a lo anterior les recordamos que las primeras cinco sesiones de rehabilitación están previamente convenidas dentro del paquete.
-              </span>
-              <span ng-if="sol.datos.tipo == 9">
-                Cualquier insumo o medicamento que se requiera para el tratamiento de la lesión y que este fuera de la lista de insumos recomendados.
-              </span>
-              <span ng-if="sol.datos.tipo == 11">
-                Rayos X y/o estudios especiales y/o notas médicas la coordinación médica es quien dictaminará, en su caso, la entrega o rechazo de informes médicos y estudios a los pacientes, de acuerdo a las indicaciones de cada compañía de seguros.
-              </span>
-              <span ng-if="sol.datos.tipo == 21">
-                Se debe solicitar salida de paquete cuando el tratamiento amerite periodo de tiempo en observación, canalización, hospitalización o procedimientos quirúrgicos, terapia intermedia o intensiva.
-              </span>
-              <span ng-if="sol.datos.tipo == 2">
-                Problemas con pase médico: <br>
-                tachaduras o enmendaduras, mas lesionados indicadas en el formato, datos faltantes y/o vigencia.
-              </span>
-            </md-whiteframe>
+              <md-input-container>
+                <label>Autorización</label>
+                <md-select ng-model="sol.datos.tipo" placeholder="Selecciona Autorización">
+                  <md-option value="">Selecciona Autorización</md-option>
+                  <md-option value="4">Interconsulta</md-option>
+                  <md-option value="3">Estudio Especial</md-option>
+                  <md-option value="1">Rehabilitación</md-option>
+                  <md-option value="9">Suministro Especial</md-option>
+                  <md-option value="11">Prestamo de Información</md-option>
+                  <md-option value="21">Salida de paquete</md-option>
+                  <md-option value="2">Problema Documental</md-option>
+                </md-select>
+              </md-input-container>
 
-          </md-content>
+              <md-whiteframe class="md-whiteframe-3dp bgm-amber" ng-if="sol.datos.tipo" layout-margin layout-align="center start">
+                
+                <span ng-if="sol.datos.tipo == 4">
+                  Te recordamos que dentro del paquete pactado está incluida la atención inicial y subsecuente por médico traumatólogo o urgenciólogo. Así como también la consulta de valoración por médico de cualquier otra especialidad, en caso de requerir tratamiento de una especialidad distinta a Traumatología y Ortopedia por favor solicita una salida de paquete.
+                </span>
+                <span ng-if="sol.datos.tipo == 3">
+                  Te recordamos que los Rx están conveniados dentro del paquete.
+                </span>
+                <span ng-if="sol.datos.tipo == 1">
+                  Según su lesión y siguiendo el criterio y las indicaciones del médico tratante es recomendable proporcionarle al lesionado ejercicio para realizar por su cuenta. Aunado a lo anterior les recordamos que las primeras cinco sesiones de rehabilitación están previamente convenidas dentro del paquete.
+                </span>
+                <span ng-if="sol.datos.tipo == 9">
+                  Cualquier insumo o medicamento que se requiera para el tratamiento de la lesión y que este fuera de la lista de insumos recomendados.
+                </span>
+                <span ng-if="sol.datos.tipo == 11">
+                  Rayos X y/o estudios especiales y/o notas médicas la coordinación médica es quien dictaminará, en su caso, la entrega o rechazo de informes médicos y estudios a los pacientes, de acuerdo a las indicaciones de cada compañía de seguros.
+                </span>
+                <span ng-if="sol.datos.tipo == 21">
+                  Se debe solicitar salida de paquete cuando el tratamiento amerite periodo de tiempo en observación, canalización, hospitalización o procedimientos quirúrgicos, terapia intermedia o intensiva.
+                </span>
+                <span ng-if="sol.datos.tipo == 2">
+                  Problemas con pase médico: <br>
+                  tachaduras o enmendaduras, mas lesionados indicadas en el formato, datos faltantes y/o vigencia.
+                </span>
+              </md-whiteframe>
 
-          
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab2" ng-disabled="sol.step2block">
-        <md-tab-label>Detalles</md-tab-label>
-        <md-tab-body> 
-
-          <md-content layout-padding layout="row">
-            
-            <md-input-container flex>
-              <label>Tipo de Interconsulta</label>
-              <md-select ng-model="sol.datos.interconsulta.tipo" placeholder="Tipo de Interconsulta">
-                <md-option value="">Selecciona Consulta</md-option>
-                <md-option value="Neurologia">Neurología</md-option>
-                <md-option value="Ginecologia">Ginecología</md-option>
-                <md-option value="Otorrinolaringologia">Otorrinolaringología</md-option>
-                <md-option value="Oftalmologia">Oftalmología</md-option>
-                <md-option value="Otro">Otro</md-option>
-              </md-select>
-            </md-input-container>
+            </md-content>
 
             
+          </md-tab-body>
+        </md-tab>
+        <md-tab id="tab2" ng-disabled="sol.step2block">
+          <md-tab-label>Detalles</md-tab-label>
+          <md-tab-body> 
 
-          </md-content>
-          
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab3" ng-disabled="sol.step3block">
-        <md-tab-label>Justificación</md-tab-label>
-        <md-tab-body>
-          
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab4" ng-disabled="sol.step4block">
-        <md-tab-label>Soporte</md-tab-label>
-        <md-tab-body>
-          
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab5" ng-disabled="sol.step5block">
-        <md-tab-label>Comprobante</md-tab-label>
-        <md-tab-body layout-padding>
+            <md-content layout="column" layout-padding>
+              
+              <md-input-container layout-align="center">
+                <label>Tipo de Interconsulta</label>
+                <md-select ng-model="sol.datos.interconsulta.tipo" placeholder="Tipo de Interconsulta">
+                  <md-option value="">Selecciona Consulta</md-option>
+                  <md-option value="Neurologia">Neurología</md-option>
+                  <md-option value="Ginecologia">Ginecología</md-option>
+                  <md-option value="Otorrinolaringologia">Otorrinolaringología</md-option>
+                  <md-option value="Oftalmologia">Oftalmología</md-option>
+                  <md-option value="Otro">Otro</md-option>
+                </md-select>
+              </md-input-container>
 
-        </md-tab-body>
-      </md-tab>
-    </md-tabs>
+              <div ng-if=" sol.datos.interconsulta.tipo == 'Ginecologia' ">
+                
+                <md-content layout="row" layout-align="center start" layout-padding>
+                  <md-subheader>¿La Paciente se Encuentra Embarazada?</md-subheader>
+                  <md-button class="md-raised md-primary" ng-click="sol.pacienteEmbarazada = true" aria-label="Si">Si</md-button>
+                  <md-button class="md-raised md-warn" ng-click="sol.siguiente()" aria-label="No">No</md-button>
+                </md-content>
+                <br>
+                <md-content layout="column" ng-if=" sol.pacienteEmbarazada ">
+                    
+                    <div layout="row" layout-align="center start" layout-wrap>
+                        
+                      <div class="text-center" flex>
+                        <p>¿Actualmente está sometida a control ginecológico?</p>
+
+                        <md-radio-group ng-model="datos.interconsulta.controlgineco" layout="row" layout-align="center start" >
+
+                          <md-radio-button value="SI">Si</md-radio-button>
+                          <md-radio-button value="NO"> No </md-radio-button>
+
+                        </md-radio-group>
+                      </div>
+                      <div class="text-center" flex>
+                        <p>¿Dolor abdominal?</p>
+
+                        <md-radio-group ng-model="datos.interconsulta.dolorabdominal" layout="row" layout-align="center start">
+
+                          <md-radio-button value="SI">Si</md-radio-button>
+                          <md-radio-button value="NO"> No </md-radio-button>
+
+                        </md-radio-group>
+                      </div>
+                      <div class="text-center" flex>
+                        <p>Movimientos Fetales</p>
+
+                        <md-radio-group ng-model="datos.interconsulta.movimientosfetales" layout="row" layout-align="center start">
+
+                          <md-radio-button value="Presentes">Presentes</md-radio-button>
+                          <md-radio-button value="Ausentes"> Ausentes </md-radio-button>
+
+                        </md-radio-group>
+                      </div>
+
+                    </div>
+                    <br>
+                    <div layout="row" layout-align="center start" layout-padding>
+                      
+                      <md-input-container class="md-block" flex>
+                        <label>Semanas de gestacion</label>
+                        <input type="number" step="1" name="semanas" ng-model="sol.datos.interconsulta.semanas" min="0" max="36" />
+                      </md-input-container>
+                      
+                      <md-input-container class="md-block" flex>
+                        <label>Frecuencia cardiaca fetal</label>
+                        <input type="text"  ng-model="sol.datos.interconsulta.movimientosfetales" />
+                      </md-input-container>
+
+                    </div>
+
+                    <div layout-padding>
+                      
+                      <md-input-container class="md-block">
+                        <label>Observaciones</label>
+                        <textarea ng-model="sol.datos.interconsulta.observaciones" md-select-on-focus></textarea>
+                      </md-input-container>
+        
+
+                    </div>
+
+
+                </md-content>
+
+              </div>
+
+            </md-content>
+            
+          </md-tab-body>
+        </md-tab>
+        <md-tab id="tab3" ng-disabled="sol.step3block">
+          <md-tab-label>Justificación</md-tab-label>
+          <md-tab-body>
+
+            <md-content layout="column" layout-gt-md="row" layout-align="center start" layout-padding>
+                      
+              <md-input-container flex>
+                <label>Diagnostico Actual</label>
+                <input type="text" ng-model="sol.datos.diagnostico" />
+              </md-input-container>
+              
+              <md-input-container flex>
+                <label>Justificación y Observaciones</label>
+                <input type="text"  ng-model="sol.datos.justificacion" />
+              </md-input-container>
+
+            </md-content>
+            
+          </md-tab-body>
+        </md-tab>
+        <md-tab id="tab4" ng-disabled="sol.step4block">
+          <md-tab-label>Soporte</md-tab-label>
+          <md-tab-body>
+
+            <md-content>
+
+              <md-subheader class="md-no-sticky">Proporciona información adicional para agilizar tu solicitud (Nota Médica, Pase, Identificacion, Etc.)</md-subheader>
+              <md-divider></md-divider>
+              
+              <div layout-gt-sm="row" layout="column" layout-align="center center">
+
+                <md-button  aria-label="subir archivo"
+                            ngf-select="atn.subirDigitales($files,atn.tipo,$event)" 
+                            ngf-change="atn.subirDigitales($files,atn.tipo,$event)" 
+                            ngf-multiple="false" 
+                            ngf-pattern="'.pdf,image/*'"
+                            ngf-accept="'.pdf,image/*'" 
+                            ng-model-options="{allowInvalid: false}">
+                  Subir Archivo</md-button>
+                
+              </div>
+              <div layout="row" layout-align="center center" flex>
+                <md-progress-circular md-mode="indeterminate" md-diameter="40" ng-if="atn.subiendoImagen"></md-progress-circular>
+              </div>
+              <div class="drop-box" ngf-drop accept="'.pdf,image/*'" ngf-drag-over-class="dragover" ngf-multiple="false" ngf-pattern="'.pdf,image/*'" ngf-change="atn.subirDigitales($files,atn.tipo,$event)" flex>
+                  Arrastra tus archivos aqui
+              </div>
+
+            </md-content>
+            
+          </md-tab-body>
+        </md-tab>
+        <md-tab id="tab5" ng-disabled="sol.step5block">
+          <md-tab-label>Comprobante</md-tab-label>
+          <md-tab-body>
+              <md-content layout="row" layout-align="center start" layout-padding>
+                <md-progress-circular md-mode="indeterminate" md-diameter="40" ng-if="sol.guardando"></md-progress-circular>
+                <md-button class="md-raised md-primary" ng-click="sol.solicitar()" ng-if="!sol.guardando" aria-label="Genera Solicitud">Genera Solicitud</md-button>
+                
+              </md-content>
+          </md-tab-body>
+        </md-tab>
+        <md-tab id="tab5" ng-disabled="true">
+          <md-tab-label>Test</md-tab-label>
+          <md-tab-body>
+              
+          </md-tab-body>
+        </md-tab>
+  
+      </md-tabs>
 
     </md-dialog-content>
 
