--- a/client/app/views/autorizaciones.html
+++ b/client/app/views/autorizaciones.html
@@ -18,49 +18,90 @@
 
 <br>
 
-<md-content class="md-whiteframe-2dp" ng-if="dt.autorizaciones.datos">
+<md-content class="md-whiteframe-2dp">
   
-  <md-subheader class="md-no-sticky">Datos de la Autorización</md-subheader>
-  <md-divider></md-divider>
-  <div layout-padding>
-    <h4><strong>Numero de Autorización: {{ dt.autorizaciones.datos.AUM_clave }}</strong></h4> <br>
-    <label>Fecha Registro: {{ dt.autorizaciones.datos.AUM_fechaReg }} </label> <br>
-    <label>Fecha Autorización: {{ dt.autorizaciones.datos.AUM_fecha }} </label> <br>
-    <label>Descripción Médica: {{ dt.autorizaciones.datos.AUM_descripcionmedica }} </label> <br>
-    <label>Diagnostico: {{ dt.autorizaciones.datos.AUM_diagnostico }} </label> <br>
-  </div>
-
-  <md-subheader class="md-no-sticky">Movimientos</md-subheader>
-  <div layout="column" layout-gt-sm="row" layout-padding>
-    <md-list flex="50">
-                
-      <md-list-item class="md-3-line"  ng-repeat="movimiento in dt.autorizaciones.movimientos" ng-click="null"> 
-        <ng-md-icon icon="layers"></ng-md-icon> 
-
-        <div class="md-list-item-text" layout="column">
-          <h3>{{ movimiento.TIM_nombreE }}</h3>
-          <h4>{{ movimiento.MOA_fecha }}</h4>
-          <p>{{ movimiento.MOA_texto }}</p>
-        </div>
+  <md-tabs md-dynamic-height md-border-bottom>
+      <md-tab label="Solicitudes">
         
-        <ng-md-icon aria-label="Solicitar Cobro" icon="attach_money" class="md-secondary" ng-click="null">
-          <md-tooltip md-direction="top">
-            Solicitar Cobro
-          </md-tooltip>
-        </ng-md-icon>
-      </md-list-item>
-      
+        <md-content class="md-whiteframe-2dp" ng-if="dt.solicitudes.length == 0">
+          <md-subheader class="md-no-sticky">Sin Solicitudes Registradas</md-subheader>
+        </md-content>
 
-    </md-list>
+        <md-content ng-if="dt.solicitudes.length > 0">
+          <md-subheader class="md-no-sticky">Solicitudes Registradas</md-subheader>
 
-    <div flex="50"></div>
-  </div>
+          <md-table-container>
+            <table md-table>
+              <thead md-head>
+                <tr md-row>
+                  <th md-column>No. de Solicitud</th>
+                  <th md-column>Tipo de Autorización</th>
+                  <th md-column>Fecha de Solicitud</th>
+                  <th md-column>Estatus</th>
+                </tr>
+              </thead>
+              <tbody md-body>
+                <tr md-row class="fila" ng-repeat="solicitud in dt.solicitudes">
+                  
+                  <td md-cell>{{solicitud.SOL_claveint}}</td>
+                  <td md-cell>{{solicitud.TIM_nombre}}</td>
+                  <td md-cell>{{solicitud.SOL_fechaReg}}</td>
+                  <td md-cell>
+                    <span ng-if="solicitud.SOL_estatus == '1' ">Pendiente de Autorizar</span>
+                  </td>
+             
+                </tr>
+                
+              </tbody>
+            </table>
+          </md-table-container>
 
+        </md-content>
 
-</md-content>
+      </md-tab>
+      <md-tab label="Autorización" ng-disabled="!dt.autorizaciones.datos">
+        
+        <md-subheader class="md-no-sticky">Datos de la Autorización</md-subheader>
+        <md-divider></md-divider>
+        <div layout-padding>
+          <h4><strong>Numero de Autorización: {{ dt.autorizaciones.datos.AUM_clave }}</strong></h4> <br>
+          <label>Fecha Registro: {{ dt.autorizaciones.datos.AUM_fechaReg }} </label> <br>
+          <label>Fecha Autorización: {{ dt.autorizaciones.datos.AUM_fecha }} </label> <br>
+          <label>Descripción Médica: {{ dt.autorizaciones.datos.AUM_descripcionmedica }} </label> <br>
+          <label>Diagnostico: {{ dt.autorizaciones.datos.AUM_diagnostico }} </label> <br>
+        </div>
 
-<md-content class="md-whiteframe-2dp" ng-if="!dt.autorizaciones.datos">
-  <md-subheader class="md-no-sticky">Sin Autorización registrada</md-subheader>
+        <md-subheader class="md-no-sticky">Movimientos</md-subheader>
+        <div layout="column" layout-gt-sm="row" layout-padding>
+          
+          <md-list flex="50">
+                      
+            <md-list-item class="md-3-line"  ng-repeat="movimiento in dt.autorizaciones.movimientos" ng-click="null"> 
+              <ng-md-icon icon="layers"></ng-md-icon> 
+
+              <div class="md-list-item-text" layout="column">
+                <h3>{{ movimiento.TIM_nombreE }}</h3>
+                <h4>{{ movimiento.MOA_fecha }}</h4>
+                <p>{{ movimiento.MOA_texto }}</p>
+              </div>
+              
+              <ng-md-icon aria-label="Solicitar Cobro" icon="attach_money" class="md-secondary" ng-click="null">
+                <md-tooltip md-direction="top">
+                  Solicitar Cobro
+                </md-tooltip>
+              </ng-md-icon>
+            </md-list-item>
+            
+
+          </md-list>
+
+          <div flex="50"></div>
+
+        </div>
+
+      </md-tab>
+    </md-tabs>
+
 </md-content>
 
 
