--- a/client/app/stylesheets/main.css
+++ b/client/app/stylesheets/main.css
@@ -76,6 +76,9 @@ h1,h2,h3,h4{
   font-weight: 300;
 }
 
+._md-datepicker-floating-label > md-datepicker .md-datepicker-input-container {
+    width: 60%;
+}
 
 md-bottom-sheet.md-grid md-list-item .md-grid-item-content {
     border: 1px solid transparent;
